# rust-serde_cef

./: .gitignore  Cargo.toml  README.md
src/: de.rs  lib.rs  record.rs  result.rs  ser.rs  utils.rs
